# rsautoclicker

./: Cargo.toml  README.md  build.rs
src/: clicker.rs  keyboard_hook.rs  keys.rs  main.rs  resources.rs  settings.rs
src/gui/: app.rs  mod.rs  settings_editor.rs
